# pbkfs

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
postgres/: docker-compose.yml
postgres/fixtures/: README.md
specs/001-pbkfs-backup-mount/: plan.md  tasks.md
specs/pbkfs-backup-mount/: delta-datafiles.md  delta-new-patch-format.md
src/: lib.rs  main.rs
src/backup/: chain.rs  metadata.rs  mod.rs
src/binding/: lock.rs  mod.rs
src/cli/: cleanup.rs  daemon.rs  mod.rs  mount.rs  pid.rs  stat.rs  unmount.rs
src/fs/: delta.rs  fuse.rs  mod.rs  overlay.rs  pending.rs
src/logging/: mod.rs
tests/contract/: cli_contract_tests.rs
tests/integration/: cleanup_tests.rs  delta_recovery_tests.rs  mount_perf_tests.rs  mount_postgres_tests.rs
tests/unit/: analyze_pg_delta_tests.rs  binding_tests.rs  chain_resolution_tests.rs  delta_tests.rs  fs_overlay_tests.rs  metadata_tests.rs
utils/: README.md  analyze_pg_delta.py  compare_trees.sh  pgtest.sh
