[package]
name = "pbkfs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "pbkfs"
path = "src/lib.rs"

[[bin]]
name = "pbkfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
fuser = { version = "0.15.1", default-features = false, features = ["abi-7-22"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
ctrlc = "3"
flate2 = "1.0"
lz4_flex = { version = "0.10", features = ["std"] }
zstd = "0.13"
crossbeam-channel = "0.5"
dashmap = "6.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.10"

[[test]]
name = "contract_cli_contract_tests"
path = "tests/contract/cli_contract_tests.rs"

[[test]]
name = "unit_fs_overlay_tests"
path = "tests/unit/fs_overlay_tests.rs"

[[test]]
name = "unit_delta_tests"
path = "tests/unit/delta_tests.rs"

[[test]]
name = "unit_chain_resolution_tests"
path = "tests/unit/chain_resolution_tests.rs"

[[test]]
name = "unit_binding_tests"
path = "tests/unit/binding_tests.rs"

[[test]]
name = "unit_metadata_tests"
path = "tests/unit/metadata_tests.rs"

[[test]]
name = "integration_mount_postgres_tests"
path = "tests/integration/mount_postgres_tests.rs"

[[test]]
name = "integration_cleanup_tests"
path = "tests/integration/cleanup_tests.rs"

[[test]]
name = "integration_mount_perf_tests"
path = "tests/integration/mount_perf_tests.rs"

[[test]]
name = "integration_delta_recovery_tests"
path = "tests/integration/delta_recovery_tests.rs"
